--- a/_notebooks/2022-03-15-Earthquake_prac_3.ipynb
+++ b/_notebooks/2022-03-15-Earthquake_prac_3.ipynb
@@ -3161,6 +3161,436 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c20a13-46c0-470e-9e73-cec89b44d9bf",
+   "metadata": {},
+   "source": [
+    "#### Time 부여?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "1f04ad41-3dae-4cc0-a5f0-44e95ec8f6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_df_1 = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year==\"2004\"').reset_index().iloc[:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "93748111-53e4-4b46-877a-60b99d06d341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_df_2 = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year==\"2010\"').reset_index().iloc[:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "7aa1f0a0-0dac-4bbd-8c53-85ea08c57ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_df_3 = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year==\"2011\"').reset_index().iloc[:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "a03c1c6a-d2fe-4632-989e-42598da9bbc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_1 = _df_1.loc[:,\"Magnitude\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "5c2f23d3-949d-4efb-a936-f376a9b0cded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_2 = _df_2.loc[:,\"Magnitude\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "372e48d2-9f4c-4e25-ba63-7d3489b0ff93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_3 = _df_3.loc[:,\"Magnitude\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "7806c7bf-f5f3-4520-a521-0e8dd4cdd083",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_1(i,j):\n",
+    "    a1=abs(_df_1.Latitude[j] - _df_1.Latitude[i])\n",
+    "    a2=abs(_df_1.Latitude[j] + _df_1.Latitude[i])\n",
+    "    b1=abs(_df_1.Longitude[j] - _df_1.Longitude[i])\n",
+    "    b2=abs(_df_1.Longitude[j] + _df_1.Longitude[i])\n",
+    "    a= np.min([a1,a2])\n",
+    "    b= np.min([b1,b2])\n",
+    "    return np.sqrt(a**2+b**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "22ca3672-c133-4bcf-ab6a-dd5a3a458c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight_1(i,j,theta=80,kappa=1000):\n",
+    "    return np.exp( -np.abs(dist_1(i,j))**2 / (2*theta**2) ) if dist_1(i,j) <= kappa else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "3a360c2c-6090-4b39-8808-59df09015ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_2(i,j):\n",
+    "    a1=abs(_df_2.Latitude[j] - _df_2.Latitude[i])\n",
+    "    a2=abs(_df_2.Latitude[j] + _df_2.Latitude[i])\n",
+    "    b1=abs(_df_2.Longitude[j] - _df_2.Longitude[i])\n",
+    "    b2=abs(_df_2.Longitude[j] + _df_2.Longitude[i])\n",
+    "    a= np.min([a1,a2])\n",
+    "    b= np.min([b1,b2])\n",
+    "    return np.sqrt(a**2+b**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "a984ebdb-b993-4734-b105-f0a19ec72dde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight_2(i,j,theta=80,kappa=1000):\n",
+    "    return np.exp( -np.abs(dist_2(i,j))**2 / (2*theta**2) ) if dist_2(i,j) <= kappa else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "id": "4d14a378-dd82-448d-8318-6921395dc674",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_3(i,j):\n",
+    "    a1=abs(_df_3.Latitude[j] - _df_3.Latitude[i])\n",
+    "    a2=abs(_df_3.Latitude[j] + _df_3.Latitude[i])\n",
+    "    b1=abs(_df_3.Longitude[j] - _df_3.Longitude[i])\n",
+    "    b2=abs(_df_3.Longitude[j] + _df_3.Longitude[i])\n",
+    "    a= np.min([a1,a2])\n",
+    "    b= np.min([b1,b2])\n",
+    "    return np.sqrt(a**2+b**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "90d54e47-9678-4b04-99eb-27a344aecfa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight_3(i,j,theta=80,kappa=1000):\n",
+    "    return np.exp( -np.abs(dist_3(i,j))**2 / (2*theta**2) ) if dist_3(i,j) <= kappa else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "eeb50f82-8539-4cfe-9ab2-d35c222fd4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from haversine import haversine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "id": "c0e01768-6889-4f09-a338-669184c94f1a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def distdist_1(i,j):\n",
+    "    return haversine((_df_1.Latitude[i],_df_1.Longitude[i]),(_df_1.Latitude[j],_df_1.Longitude[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "5173f102-37b8-4fe5-872f-9416137e9a8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weightweight_1(i,j,theta=100000,kappa=100000):\n",
+    "    return np.exp( -np.abs(distdist_1(i,j))**2 / (2*theta**2) ) if distdist_1(i,j) <= kappa else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "id": "9531d292-c173-4d7d-a526-fac0578c6316",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def distdist_2(i,j):\n",
+    "    return haversine((_df_2.Latitude[i],_df_2.Longitude[i]),(_df_2.Latitude[j],_df_2.Longitude[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "4c61198c-5bc5-4f48-bd89-738902da165a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weightweight_2(i,j,theta=100000,kappa=100000):\n",
+    "    return np.exp( -np.abs(distdist_2(i,j))**2 / (2*theta**2) ) if distdist_2(i,j) <= kappa else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "04879ed6-d79f-4426-a834-a8db9c5b4775",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def distdist_3(i,j):\n",
+    "    return haversine((_df_3.Latitude[i],_df_3.Longitude[i]),(_df_3.Latitude[j],_df_3.Longitude[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "id": "ac94a8b8-204e-4905-97d8-db8a6106f6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weightweight_3(i,j,theta=100000,kappa=100000):\n",
+    "    return np.exp( -np.abs(distdist_3(i,j))**2 / (2*theta**2) ) if distdist_3(i,j) <= kappa else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "97f4ed6c-382e-4290-b275-e8b7b3584de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_11 = np.array([[weight_1(i,j) for i in range(len(_df_1))] for j in range(len(_df_1))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "289d4c56-467d-4268-a4ca-f7d49e2aeb08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_21 = np.array([[weight_2(i,j) for i in range(len(_df_2))] for j in range(len(_df_2))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "43a9b0b9-04a1-46b7-bd9a-959f1ea52584",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_31 = np.array([[weight_3(i,j) for i in range(len(_df_3))] for j in range(len(_df_3))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "fe6cdd0f-ab88-4b45-b65b-f5280af94833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_12 = np.array([[weightweight_1(i,j) for i in range(len(_df_1))] for j in range(len(_df_1))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "7a15acf9-4d6d-42be-a849-94af89d6e9f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_22 = np.array([[weightweight_2(i,j) for i in range(len(_df_2))] for j in range(len(_df_2))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "630cde88-eaa2-4ef6-acc5-a69282118e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_32 = np.array([[weightweight_3(i,j) for i in range(len(_df_3))] for j in range(len(_df_3))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb1aeb17-605e-4eaf-a247-2c5b9a19d783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_11 = np.diag(W_11.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "854874e7-bb85-44a4-9bac-eba48bc66e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_21 = np.diag(W_21.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abe40e65-e97a-44eb-a1f0-8e1508d11b81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_31 = np.diag(W_31.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e1b600e-6764-46f7-82cc-f057c22f3b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_12 = np.diag(W_12.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17e27363-4b61-41f8-83b3-17a91bf97290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_22 = np.diag(W_22.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5671ff1f-dabe-42e8-957c-f7cbf7d9b833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_32 = np.diag(W_32.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6657751c-4ece-4a32-a530-584995f5d111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_11 = D_11 - W_11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0e902a-0301-4e51-bfe8-22c03c05c201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_21 = D_21 - W_21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6c44765-5942-4e4c-8b8e-804accee68a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_31 = D_31 - W_31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8745b0f7-3f30-4a63-9052-b0daf2ee756e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_12 = D_12 - W_12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a1d4d45-0806-453e-9a3b-a9f06aded76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_22 = D_22 - W_22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "539e673a-977f-4a99-849b-e2305cec182c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_32 = D_32 - W_32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f7c7ca-b3f6-4e00-adbe-aea9841eb66f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "001e3565-4ffe-43ea-981d-96d4643b037a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
