--- a/_notebooks/2022-03-17-GDL.ipynb
+++ b/_notebooks/2022-03-17-GDL.ipynb
@@ -751,7 +751,8 @@
    "id": "8fd52e91-0804-4ed2-a902-920d03e98807",
    "metadata": {},
    "source": [
-    "열 커널이 다른 위치로 옮겨지면 그 모양이 얼마나 변하는지를 보여주고, 변환 불변성shift-invariance의 부족을 의미함."
+    "열 커널이 다른 위치로 옮겨지면 그 모양이 얼마나 변하는지를 보여주고, 변환 불변성shift-invariance의 부족을 의미함.\n",
+    "- 여기서 시불변성은 시계열에서 정상성과 비슷한 개념으로 보면 된다!"
    ]
   },
   {
