--- a/_notebooks/2022-03-17-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-17-Earthquake-real.ipynb
@@ -187,7 +187,9 @@
   {
    "cell_type": "markdown",
    "id": "4f185c78-ba52-4910-828b-c6e256491127",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### 3. 비유클리드 공간에서의 거리 정의\n",
     "- $x$ = Latitude, 위도로 정의\n",
@@ -207,20 +209,153 @@
    "id": "7b73e95a-0544-4eb2-9831-53d47541eb20",
    "metadata": {},
    "source": [
-    "##### 4. time 고려, 거리를 이용한 a weighted adjacency matrix $W_{i,j}$ 정의"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec8f0d70-9351-4083-86d1-b7a27f3ed2ba",
-   "metadata": {},
-   "source": [
-    "$$W_{u_r,v_s}=\\begin{cases} W_t(u,v) = exp(-\\frac{[dist(i,j)]^2}{2\\theta^2}) & \\quad \\text{if } u,v \\in V_t \\wedge dist(i,j) \\leq \\kappa \\\\ \\beta & \\quad \\text{if } u = v \\wedge r=s-1 \\\\ 0 & \\quad \\text{otherwise} \\end{cases}$$"
+    "##### 4. time 고려, 거리를 이용한 a weighted adjacency matrix $W_{i,j}$ 정의\n",
+    "- $V_t$ : the number of countries, $|V| = n$\n",
+    "- $\\cal{V} = \\begin{bmatrix} 2004a & 2005a & 2006a & \\dots \\\\ 2004b & 2005b & 2006b & \\dots \\\\ \\vdots & \\vdots & \\vdots & \\vdots \\\\ \\dots & \\dots & \\dots &  \\dots \\end{bmatrix}$, $|\\cal{V}| = nm$, (단, $m = t$)\n",
+    "- $W_t=\\exp(-\\frac{[dist(i,j)]^2}{2\\theta^2}) $ $\\quad \\text{if } dist(i,j) \\leq \\kappa$\n",
+    "- $W_{u_r,v_s}=\\begin{cases} W_t(u,v) & \\quad \\text{if } u,v \\in V_t  \\\\ \\beta & \\quad \\text{if } u = v \\wedge r=s-1 \\\\ 0 & \\quad \\text{otherwise} \\end{cases}$\n",
+    "- $W(u,v) = \\begin{bmatrix} weight(2004a,2004a) & weight(2004a,2005a) & \\dots & \\dots \\\\ weight(2004a,2004b) & weight(2005b,2005b) & \\dots& \\dots \\\\ \\vdots & \\vdots & \\vdots & \\vdots \\\\ \\dots & \\dots & \\dots & \\dots \\end{bmatrix}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 129,
+   "id": "7db3d673-c8ae-48db-a33f-df26e36be621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V_2004 = np.array([_df.query('Year==\"2004\"').iloc[:,1:3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "a5d9b2d6-1483-40ad-837d-40b288dee025",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ -21.476,  169.859],\n",
+       "        [  -8.31 ,  115.788],\n",
+       "        [  17.488, -101.303],\n",
+       "        ...,\n",
+       "        [   7.636,   93.947],\n",
+       "        [   6.204,   92.913],\n",
+       "        [   4.73 ,   95.14 ]]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V_2004"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "0e3f8f3b-508b-43d6-b960-027e424b52b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V_2005 = np.array([_df.query('Year==\"2005\"').iloc[:,1:3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "e015f30e-79ce-41d2-8075-c60533d762ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 533, 2)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V_2005.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "74d5d8a2-c251-4326-89b4-1ebaf64da8d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ -21.476,  169.859],\n",
+       "        [  -8.31 ,  115.788],\n",
+       "        [  17.488, -101.303],\n",
+       "        ...,\n",
+       "        [  -1.386,  -77.517],\n",
+       "        [  26.822,  140.646],\n",
+       "        [   7.529,  -82.266]]])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack([V_2004,V_2005])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "bf7a3495-3ec5-48b5-9544-099b660f90c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 571 and the array at index 1 has size 533",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_249420/1036401131.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mV_2004\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mV_2005\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/csy/lib/python3.8/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m         \u001b[0marrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    283\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 571 and the array at index 1 has size 533"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ec1f4f5-48a5-4511-8333-572bbb532452",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "haversine((_df.Latitude[i],_df.Longitude[i]),(_df.Latitude[j],_df.Longitude[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab829ac4-c8ad-4fe7-8de5-f89cb5f6f68f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "id": "b896f597-f7d0-4abd-83ef-c5684f728809",
    "metadata": {},
    "outputs": [],
@@ -307,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "9667e976-f8b6-4d83-b26f-ce649b5e7de4",
    "metadata": {},
    "outputs": [],
