--- a/_notebooks/2022-03-18-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-18-Earthquake-real.ipynb
@@ -361,10 +361,10 @@
    "outputs": [],
    "source": [
     "def dist(i,j):\n",
-    "    a1=abs(_df.query('Year==\"2004\"').Latitude[j] - _df.query('Year==\"2004\"').Latitude[i])\n",
-    "    a2=abs(_df.query('Year==\"2004\"').Latitude[j] + _df.query('Year==\"2004\"').Latitude[i])\n",
-    "    b1=abs(_df.query('Year==\"2004\"').Longitude[j] - _df.query('Year==\"2004\"').Longitude[i])\n",
-    "    b2=abs(_df.query('Year==\"2004\"').Longitude[j] + _df.query('Year==\"2004\"').Longitude[i])\n",
+    "    a1=abs(_df.Latitude[j] - _df.Latitude[i])\n",
+    "    a2=abs(_df.Latitude[j] + _df.Latitude[i])\n",
+    "    b1=abs(_df.Longitude[j] - _df.Longitude[i])\n",
+    "    b2=abs(_df.Longitude[j] + _df.Longitude[i])\n",
     "    a= np.min([a1,a2])\n",
     "    b= np.min([b1,b2])\n",
     "    return np.sqrt(a**2+b**2)"
