--- a/_notebooks/2022-03-18-Earthquake_prac_3.ipynb
+++ b/_notebooks/2022-03-18-Earthquake_prac_3.ipynb
@@ -572,48 +572,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W1= np.array([[weight1(i,j) for i in range(len(_df))] for j in range(len(_df))])\n",
-    "np.save(file=\"./mysave\",arr=W1)"
+    "W1= np.array([[weight1(i,j) for i in range(len(_df))] for j in range(len(_df))])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "397ec2c4-990c-4bfd-89ad-e54f4d9d73f8",
+   "cell_type": "markdown",
+   "id": "b4067ee6-7205-4148-8ecc-3d1e27821ae0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "aa=np.load('./add.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75f226e3-b9bb-4861-86ec-8d9e93979ea5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2433edf-66e1-483d-ae35-8aa180550f1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.to"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e163da2f-37ed-45ab-8baf-200cd227895c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W1"
+    "```python\n",
+    "aa=np.load('./add.npy')\n",
+    "aa.to\n",
+    "np.save(file=\"./mysave\",arr=W1)\n",
+    "```"
    ]
   },
   {
@@ -4441,6 +4412,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e0842f-1f86-40d0-97ba-a478a79769c8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with plt.style.context('seaborn-dark'):\n",
+    "    fig,ax = plt.subplots(figsize = (16,8))\n",
+    "    nodes = nx.draw_networkx_nodes(_G_11,m_pos_11,node_color=_df_1.comp3,node_size = np.abs(_df_1.comp3)*100,ax=ax)\n",
+    "    plt.colorbar(nodes)\n",
+    "    plt.axis()\n",
+    "    ax.set_axis_on()\n",
+    "    ax.tick_params(left=True, bottom=True, labelleft=True, labelbottom=True)\n",
+    "    ax.annotate(\"Indonesia Sumatra\", xy=( 101.28817388446576,-0.26014368149947664), xycoords=\"data\",\n",
+    "                  va=\"center\", ha=\"center\",\n",
+    "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f403997c-c29a-4d89-8189-4dad4a4713ed",
    "metadata": {
@@ -4511,6 +4504,28 @@
     "with plt.style.context('seaborn-dark'):\n",
     "    fig,ax = plt.subplots(figsize = (16,8))\n",
     "    nodes = nx.draw_networkx_nodes(_G_12,m_pos_12,node_color=_df_1.comp22,node_size = np.abs(_df_1.comp22)*100,ax=ax)\n",
+    "    plt.colorbar(nodes)\n",
+    "    plt.axis()\n",
+    "    ax.set_axis_on()\n",
+    "    ax.tick_params(left=True, bottom=True, labelleft=True, labelbottom=True)\n",
+    "    ax.annotate(\"Indonesia Sumatra\", xy=( 101.28817388446576,-0.26014368149947664), xycoords=\"data\",\n",
+    "                  va=\"center\", ha=\"center\",\n",
+    "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e063f72d-5343-4009-abec-5d06a3e8f1e0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with plt.style.context('seaborn-dark'):\n",
+    "    fig,ax = plt.subplots(figsize = (16,8))\n",
+    "    nodes = nx.draw_networkx_nodes(_G_12,m_pos_12,node_color=_df_1.comp33,node_size = np.abs(_df_1.comp33)*100,ax=ax)\n",
     "    plt.colorbar(nodes)\n",
     "    plt.axis()\n",
     "    ax.set_axis_on()\n",
@@ -4603,6 +4618,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62bc651b-a175-4ded-8a40-043d1b8b2332",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with plt.style.context('seaborn-dark'):\n",
+    "    fig,ax = plt.subplots(figsize = (16,8))\n",
+    "    nodes = nx.draw_networkx_nodes(_G_21,m_pos_21,node_color=_df_2.comp3,node_size = np.abs(_df_2.comp3)*100,ax=ax)\n",
+    "    plt.colorbar(nodes)\n",
+    "    plt.axis()\n",
+    "    ax.set_axis_on()\n",
+    "    ax.tick_params(left=True, bottom=True, labelleft=True, labelbottom=True)\n",
+    "    ax.annotate(\"Chile Maule\", xy=(-72.41179564292405,-35.301421198712724), xycoords=\"data\",\n",
+    "                  va=\"center\", ha=\"center\",\n",
+    "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "446c24ab-f9a1-4097-b637-dadc041f8539",
    "metadata": {
@@ -4673,6 +4710,28 @@
     "with plt.style.context('seaborn-dark'):\n",
     "    fig,ax = plt.subplots(figsize = (16,8))\n",
     "    nodes = nx.draw_networkx_nodes(_G_22,m_pos_22,node_color=_df_2.comp22,node_size = np.abs(_df_2.comp22)*100,ax=ax)\n",
+    "    plt.colorbar(nodes)\n",
+    "    plt.axis()\n",
+    "    ax.set_axis_on()\n",
+    "    ax.tick_params(left=True, bottom=True, labelleft=True, labelbottom=True)\n",
+    "    ax.annotate(\"Chile Maule\", xy=(-72.41179564292405,-35.301421198712724), xycoords=\"data\",\n",
+    "                  va=\"center\", ha=\"center\",\n",
+    "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caeef096-3610-45b8-baae-44424e0c7179",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with plt.style.context('seaborn-dark'):\n",
+    "    fig,ax = plt.subplots(figsize = (16,8))\n",
+    "    nodes = nx.draw_networkx_nodes(_G_22,m_pos_22,node_color=_df_2.comp33,node_size = np.abs(_df_2.comp33)*100,ax=ax)\n",
     "    plt.colorbar(nodes)\n",
     "    plt.axis()\n",
     "    ax.set_axis_on()\n",
@@ -4765,6 +4824,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c7de8d-def0-492c-918c-323f490a9640",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with plt.style.context('seaborn-dark'):\n",
+    "    fig,ax = plt.subplots(figsize = (16,8))\n",
+    "    nodes = nx.draw_networkx_nodes(_G_31,m_pos_31,node_color=_df_3.comp3,node_size = np.abs(_df_3.comp3)*100,ax=ax)\n",
+    "    plt.colorbar(nodes)\n",
+    "    plt.axis()\n",
+    "    ax.set_axis_on()\n",
+    "    ax.tick_params(left=True, bottom=True, labelleft=True, labelbottom=True)\n",
+    "    ax.annotate(\"Japan Sanriku\", xy=(141.81051675491926,39.138785036804705), xycoords=\"data\",\n",
+    "                  va=\"center\", ha=\"center\",\n",
+    "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f786973a-0d5f-4fed-a809-89b3b823074a",
    "metadata": {
@@ -4835,6 +4916,28 @@
     "with plt.style.context('seaborn-dark'):\n",
     "    fig,ax = plt.subplots(figsize = (16,8))\n",
     "    nodes = nx.draw_networkx_nodes(_G_32,m_pos_32,node_color=_df_3.comp22,node_size = np.abs(_df_3.comp22)*100,ax=ax)\n",
+    "    plt.colorbar(nodes)\n",
+    "    plt.axis()\n",
+    "    ax.set_axis_on()\n",
+    "    ax.tick_params(left=True, bottom=True, labelleft=True, labelbottom=True)\n",
+    "    ax.annotate(\"Japan Sanriku\", xy=(141.81051675491926,39.138785036804705), xycoords=\"data\",\n",
+    "                  va=\"center\", ha=\"center\",\n",
+    "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b783fbd9-4e6f-4b7d-871a-f4cf059f4c83",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with plt.style.context('seaborn-dark'):\n",
+    "    fig,ax = plt.subplots(figsize = (16,8))\n",
+    "    nodes = nx.draw_networkx_nodes(_G_32,m_pos_32,node_color=_df_3.comp33,node_size = np.abs(_df_3.comp33)*100,ax=ax)\n",
     "    plt.colorbar(nodes)\n",
     "    plt.axis()\n",
     "    ax.set_axis_on()\n",
