--- a/_notebooks/2022-03-20-Earthquake_prac_3.ipynb
+++ b/_notebooks/2022-03-20-Earthquake_prac_3.ipynb
@@ -5842,30 +5842,6 @@
     "                  bbox=dict(boxstyle=\"circle, pad=5\", alpha = 0.1,fc=\"w\",lw=1, ec='r'))\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0af09ae2-b361-481a-bb7e-c617ed18d84a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43f12c5e-9caa-4deb-a254-7c93f29f4ac6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b368d1be-fa77-48ee-83e0-205e4b5e1013",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -5885,7 +5861,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  }
+  },
+  "toc-autonumbering": false,
+  "toc-showcode": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
