--- a/_notebooks/2022-03-24-Earthquake_prac_3.ipynb
+++ b/_notebooks/2022-03-24-Earthquake_prac_3.ipynb
@@ -7807,7 +7807,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
-  "toc-autonumbering": false,
+  "toc-autonumbering": true,
   "toc-showcode": false
  },
  "nbformat": 4,
