--- a/_notebooks/2022-03-15-bds_2주차.ipynb
+++ b/_notebooks/2022-03-15-bds_2주차.ipynb
@@ -3856,6 +3856,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "d66bd596-a4fe-46fe-873e-ed9299aa7088",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=1>"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "fef59afa-17cd-427c-8217-3ca8889c60f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=3>"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bb759864-ef75-4ba0-9a11-d10cca6669f3",
    "metadata": {
