--- a/_notebooks/2022-03-26-Earthquake.ipynb
+++ b/_notebooks/2022-03-26-Earthquake.ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# Earthquake_prac_4\n",
+    "# Earthquake\n",
     "> Non-Euclidean geometry\n",
     "\n",
     "- toc:true\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "id": "4ccab044-6f2e-4bbf-aa79-8172e117d6ed",
    "metadata": {},
    "outputs": [],
@@ -68,17 +68,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9f84321f-996f-46c3-aa6f-70707590ca42",
-   "metadata": {},
-   "source": [
-    "- t = Year\n",
-    "- x = Latitude\n",
-    "- y = Longitude\n",
-    "- f = Magnitude"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "0910e5ea-6e0e-49d2-893b-fc04a47df73c",
@@ -93,8 +82,7 @@
    "id": "936be994-6000-403c-9d32-56c0ac6e563d",
    "metadata": {},
    "source": [
-    "##### 2. $f(x) = y$ \n",
-    "- $y$ = Magnitude"
+    "##### 2. $f(x)$ "
    ]
   },
   {
@@ -112,7 +100,7 @@
    "id": "4f185c78-ba52-4910-828b-c6e256491127",
    "metadata": {},
    "source": [
-    "##### 3. Definition of Distiance in non-Euclidian space using Haversine Fomula"
+    "##### 3. Definition of Distiance at non-Euclidian space using Haversine Fomula"
    ]
   },
   {
@@ -180,7 +168,8 @@
    "id": "0d25eae0-8af8-4141-8d41-004b011dbf08",
    "metadata": {},
    "source": [
-    "##### 5. The weight edge function using inter-layer weights"
+    "##### 5. The weight edge function using inter-layer weights\n",
+    "- temporal edge $(v_t,v_{t+1})$"
    ]
   },
   {
@@ -392,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 124,
    "id": "3352f6e5-07d2-4ba0-97af-d2bf5d58a1a8",
    "metadata": {
     "tags": []
@@ -423,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 125,
    "id": "3786a073-e349-4e96-9ccf-6b5d05caf5a4",
    "metadata": {
     "tags": []
@@ -454,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 126,
    "id": "eda4f741-643e-4a9c-8d67-a8bde5356606",
    "metadata": {
     "tags": []
@@ -485,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 127,
    "id": "646d7f5a-9e37-4f07-b7d9-0cb3280c2bf2",
    "metadata": {
     "tags": []
@@ -516,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 128,
    "id": "5427aaca-fe90-4343-aeb7-e5b18ab7e379",
    "metadata": {
     "tags": []
@@ -547,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 129,
    "id": "f1024e29-d637-45c5-a79b-308f0fc743eb",
    "metadata": {
     "tags": []
@@ -593,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.12"
   },
   "toc-autonumbering": false,
   "toc-showcode": false
