--- a/_notebooks/2022-03-27-DRL.ipynb
+++ b/_notebooks/2022-03-27-DRL.ipynb
@@ -214,6 +214,8 @@
    "source": [
     "*감가율discount factor  = 감마gamma*\n",
     "- 받았던 보상의 시점이 미래로 더 멀어질수록, 현재 시점에서는 이에 대한 가치를 더 낮게 평가\n",
+    "\n",
+    "- 환경; 자세한 예제; 5개의 미끄러지는 칸을 가지는 환경slippery walk five, SWF\n",
     "$$G_t = R_{t+1} + R_{t+2} + R_{t+3} + \\dots R_T$$\n",
     "$$G_t = R_{t+1} + \\gamma R_{t+2} + \\gamma^2 R_{t+3} + \\dots +\\gamma^{T-1} R_T$$\n",
     "$$G_t = \\sum^{\\infty}_{k=0} \\gamma^k R_{t+k+1}$$\n",
@@ -277,6 +279,7 @@
    "source": [
     "이상적인 정책optimal policy\n",
     "- 모든 상태에 대해서 다른 정책들보다 기대 반환값이 같거나 더 크게 얻을 수 있는 정책\n",
+    "    - 벨만 이상성 공식(아래)\n",
     "$$v_{*}(s) = max_{\\pi} v_{\\pi} (s), \\forall_s \\in S$$\n",
     "$$q_{*}(s,a) = max_{\\pi} q_{\\pi}(s,a), \\forall s \\in S, \\forall a \\in A(s)$$\n",
     "$$v_{*}(s) = max_{a} \\sum_{s',r} p(s',r|s,a)[r+\\gamma v_{*} (s')]$$\n",
@@ -288,8 +291,93 @@
    "id": "8ec5942d-d3f1-47df-ad25-8c2f16398178",
    "metadata": {},
    "source": [
-    "p.114"
+    "*반복 정책 평가법iteractive policy evaluation* = *정책평가법policy rvaluation*\n",
+    "- 임의의 정책을 평가할 수 있는 알고리즘\n",
+    "- 상태 영역을 살펴보면서 반복적으로 에측치를 개선하는 방법 사용\n",
+    "- 정책을 입력으로 받고, *예측문제prediction problem*를 풀 수 있는 알고리즘에 대한 가치 함수를 출력으로 내보내는 알고리즘, 이때는 미리 정의한 정책의 가치를 계산..(?)\n",
+    "$$v_{k+1}(s) = \\sum_a \\pi(a|s) \\sum_{s', r} p(s',r|s,a) \\big[ r+\\gamma v_k (s') \\big]$$\n",
+    "- 정책 평가 알고리즘을 충분히 반복하면 정책에 대한 가치함수로 수렴시킬 수 있다.\n",
+    "\n",
+    "- 실제로 적용하는 경우에는 우리가 근사하고자 하는 가치 함수의 변화를 확인하기 위해서 기분보다 작은 임계값을 사용.\n",
+    "    - 이런 경우에는 가치 함수의 변화가 우리가 정한 임계값보다 작을경우 반복을 멈추게 된다.\n",
+    "    \n",
+    "- SWF환경에서 항상 왼쪽 행동을 취하는 정책에 이 알고리즘이 어떻게 동작할까?\n",
+    "$$v_{k+1} (s) = \\sum_a \\pi(a|s) \\sum_{s',r} p(s',r|s,a) \\big[ r + \\gamma v_k (s') \\big] $$\n",
+    "    - $\\gamma$는 1이라 가정,\n",
+    "    - 항상 왼쪽으로 가는 정책 사용\n",
+    "$$ v^{\\pi}_{1}(5)  = p(s'=4|s=5, a=\\text{왼쪽}) * [R(5,\\text{왼쪽},4) + v^{\\pi}_{0}(4)] + p(s'=5|s=5, a=\\text{왼쪽}) * [R(5,\\text{왼쪽},5) + v^{\\pi}_{0}(5)] + p(s'=6|s=5, a=\\text{왼쪽}) * [R(5,\\text{왼쪽},6) + v^{\\pi}_{0}(6)]$$\n",
+    "$$c^{\\pi}_{1} (5) = 0.50 * (0+0) + 0.33 * (0+0) + 0.166 * (1+0) = 0.166 \\dots \\text{   1번 정책 평가법을 사용했을 떄 상태에 대한 가치를 나타냄}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e51a9ce3-33df-4919-ab82-0e50d4068500",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2b6db29-1137-48e7-82d3-ce85d112284e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da93680e-805d-4550-bf4e-1e02517b50ef",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cb1fadd-7f59-4226-8cd9-1f16cc75da8c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87b69fa6-58a6-4961-b416-581fee6724fe",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26845576-8467-4cb5-9087-7113965387ea",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b14ab457-f9d4-45b6-91f2-fd449c8c440b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42d3d7f2-e6d4-4d0c-ba96-ed9fdbf99587",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6509a684-4a29-47f9-af77-e806d055019d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6b2b359-7ea1-4552-a18e-54a2c366d977",
+   "metadata": {},
+   "source": [
+    "### 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82c52b08-2755-46d8-9371-f7dc4d034abb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
