--- a/_notebooks/2022-03-27-Earthquake.ipynb
+++ b/_notebooks/2022-03-27-Earthquake.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 148,
    "id": "f4cbc022-5d75-4201-9427-46a79ed76844",
    "metadata": {},
    "outputs": [],
@@ -29,9 +29,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
-    "import networkx as nx\n",
-    "import folium\n",
-    "from IPython.display import HTML"
+    "import networkx as nx"
    ]
   },
   {
@@ -46,6 +44,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6a1f43b5-8c2f-4dc3-97c6-468f08231aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from haversine import haversine"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3261f833-5d30-45db-a51d-debffce01698",
    "metadata": {},
@@ -55,26 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "7615901c-2423-4d3d-aec2-0d1e2c2861c2",
-   "metadata": {
-    "id": "98831339-6197-4662-beee-24c51eb3ada2",
-    "outputId": "6a60b479-e363-4a9a-d3ee-a2ca5d4d9349",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df=pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/earthquakes-23k.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 149,
    "id": "0910e5ea-6e0e-49d2-893b-fc04a47df73c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_df = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"2004\" & Year<=\"2011\"').reset_index().iloc[:,1:]"
+    "_df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/earthquakes-23k.csv').assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"2004\" & Year<=\"2011\"').reset_index().iloc[:,1:]"
    ]
   },
   {
@@ -101,16 +95,6 @@
    "metadata": {},
    "source": [
     "##### 3. Definition of Distiance at non-Euclidian space using Haversine Fomula"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6a1f43b5-8c2f-4dc3-97c6-468f08231aef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from haversine import haversine"
    ]
   },
   {
@@ -283,7 +267,6 @@
     "##### 8. Singular Value Decomposition\n",
     "- $comp_k = f @ np.outer(Ψ[:,k], Ψ[:,k]) $\n",
     "    - $k = 1, 2, 3, n$\n",
-    "        - $f = n \\times 1 , np.outer(Ψ[:,k], Ψ[:,k]) = n \\times n, \\\\ \\therefore comp_k = n \\times n$\n",
     "- $p = \\sum_{1}^{n} comp_{1}^{2},\\sum_{1}^{n} comp_{2}^{2},…,\\sum_{1}^{n} comp_{n}^{2}$\n",
     "- $p = \\frac{p}{\\sum(p)}$"
    ]
