--- a/_notebooks/2022-03-28-bds-4주차.ipynb
+++ b/_notebooks/2022-03-28-bds-4주차.ipynb
@@ -18,13 +18,58 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a9756b93-8999-4711-9404-09f229e799b7",
-   "metadata": {
-    "id": "a9756b93-8999-4711-9404-09f229e799b7"
-   },
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a4f984f6-fb55-4eb7-a35f-42435e06a89d",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "### 강의영상 "
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "220adf79-5384-4025-a9a9-8090c67b567a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5bb30088-0242-4d77-a22f-ba4c78958ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10,), dtype=float32, numpy=\n",
+       "array([20.1, 22.2, 22.7, 23.3, 24.4, 25.1, 26.2, 27.3, 28.4, 30.4],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=tf.constant([20.1, 22.2, 22.7, 23.3, 24.4, 25.1, 26.2, 27.3, 28.4, 30.4]) # 기온 \n",
+    "x"
    ]
   },
   {
@@ -464,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
